fix: wrong color

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a:active {
 }
 
 a:visited {
-    color: #1e83c7;
+    color: #58b9fa;
 }
 
 /*custom class*/
